--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   },
   "dependencies": {
     "@azure/functions": "^4.0.0",
-    "axios": "^1.6.7"
+    "axios": "^1.6.7",
+    "node-fetch": "^3.3.2",
+    "unirest": "^0.6.0"
   },
   "devDependencies": {
-    "@types/node": "^18.x",
+    "@types/node": "^18.19.10",
     "rimraf": "^5.0.0",
     "typescript": "^4.0.0"
   },
